--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   />
                 </div>
                 <div class="mright">
-                  <audio src="s1.mp3" controls id="song"></audio>
+                  <audio src="https://wynk.in/music/song/8-saal/bl_A10320WT0434626746" controls id="song"></audio>
                 </div>
               </div>
               <div class="mbottom">
